(hopefully) fixed the top nav spacing

--- a/theme/dyco/styles/branding.less
+++ b/theme/dyco/styles/branding.less
@@ -50,7 +50,7 @@ h1.title {
 /*charlie  background: @secondary url('../assets/images/mainBG.png') center left repeat-x;*/
 }
 
-@navigation-spacing:31px;
+@navigation-spacing:22px;
 
 /*charlie*/
 #navigation ul#main-menu li.first {
